--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,37 @@
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/page/__content/page__content.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+
+@import url(../blocks/page/__content/_mini/page__content_mini.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/figure/figure.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/_span/intro__list_span.css);
+
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_train.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_atharva-tulsi.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_steam.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_forest.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_frozen-lake.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_baikal.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_elbrus.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_stones.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_kamchatka.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_kamchatka-mountain-field.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_baikal-rocks.css);
+@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_ergaki.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
