--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,12 +1,11 @@
 .header__lang-link {
-  text-decoration: none;
   margin-right: 18px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: normal;
   font-size: 24px;
   line-height: 28px;
   text-align: right;
-  text-decoration-line: underline;
+  text-decoration: underline;
   color: #ffffff;
 }
 
