--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,8 +1,11 @@
 .footer__copyright {
+  align-self: center;
   margin: 0;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
 }
