--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,10 +1,11 @@
 .intro__text {
-  width: 690px;
+  max-width: 690px;
   margin: 40px 0 0;
   font-family: 'Inter', 'Arial', sans-serif;
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 163%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
 }
