--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -4,6 +4,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-height: 740px;
+  min-height: inherit;
   background-color: rgba(42, 44, 47, .3);
 }
