--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,3 +4,15 @@
   background-size: cover;
 }
 
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover {
+    min-height: 480px;
+  }
+}
