--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,10 +1,11 @@
 .footer__link {
-  margin: 0 18px 0 0;
   text-decoration: none;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 18px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
   transition: opacity .2s linear;
 }
@@ -12,7 +13,3 @@
 .footer__link:hover {
   opacity: .8;
 }
-
-/*.footer__link:last-of-type {*/
-/*  margin-right: 0;*/
-/*}*/
