--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,12 +4,20 @@
   font-weight: normal;
   font-size: 24px;
   line-height: 28px;
-  text-align: right;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   text-decoration: underline;
   color: #ffffff;
 }
 
-.header__lang-link:last-child {
+.header__lang-link:last-of-type {
   margin-right: 0;
   text-decoration-line: none;
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
