--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,12 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    min-height: 52px;
-    padding: 28px 48px 0;
+  display: flex;
+  justify-content: space-between;
+  min-height: 52px;
+  padding-top: 28px;
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    padding: 16px 16px 0;
+  }
 }
