--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,10 +1,12 @@
 .intro__list {
   margin: 33px 0 0;
   padding: 0;
-  list-style-type: none;
+  list-style: none;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: normal;
   font-size: 12px;
   line-height: 18px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
 }
