--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,6 @@
 .lead__image {
-  width: 984px;
-  height: 615px;
-  margin: 64px 0 0;
+  width: 100%;
+  object-fit: contain;
+  object-position: center center;
+  display: block;
 }
