--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,10 +1,19 @@
 .lead__title {
-  width: 720px;
+  max-width: 720px;
   margin: 0 auto;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
   text-align: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+  }
 }
