--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,3 +1,15 @@
 .lead {
   padding-top: 56px;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead {
+    padding-top: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+    padding: 48px 0 0;
+  }
+}
