--- a/blocks/page/__content/_size/page__content_size_mini.css
+++ b/blocks/page/__content/_size/page__content_size_mini.css
@@ -1,3 +1,27 @@
 .page__content_size_mini {
   max-width: 984px;
+  margin: 0 auto;
+  padding-right: 148px;
+  padding-left: 148px;
+}
+
+@media screen and (max-width: 1024px) {
+  .page__content_size_mini {
+    padding-right: 48px;
+    padding-left: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .page__content_size_mini {
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page__content_size_mini {
+    padding-right: 16px;
+    padding-left: 16px;
+  }
 }
