--- a/blocks/page/__content/page__content.css
+++ b/blocks/page/__content/page__content.css
@@ -1,4 +1,20 @@
 .page__content {
   max-width: 1184px;
   margin: 0 auto;
+  padding-right: 48px;
+  padding-left: 48px;
+}
+
+@media screen and (max-width: 768px) {
+  .page__content {
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page__content {
+    padding-right: 16px;
+    padding-left: 16px;
+  }
 }
