--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,3 +4,23 @@
   grid-row: 2/3;
   grid-column: 1/2;
 }
+
+@media screen and (max-width: 1024px) {
+  .place__image {
+    width: 440px;
+    height: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__image {
+    width: 340px;
+    height: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  /*.place__image {*/
+  /*  min-width: 100%;*/
+  }
+}
