--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,9 +4,17 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 163%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
 }
 
 .place__paragraph:last-of-type {
   margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
 }
