--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,3 +9,23 @@
 .place:first-of-type {
   margin: 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .place {
+    gap: 48px 32px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place {
+    gap: 48px 28px;
+    margin-top: 73px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place {
+    grid-template-columns: 1fr;
+    gap: 50px;
+  }
+}
