--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
   margin: 32px 0 0;
-  width: 360px;
+  max-width: 360px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: normal;
   font-size: 18px;
@@ -9,4 +9,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
+}
+
+@media screen and (max-width: 320px) {
+  .cover__subtitle {
+    margin: 16px 0 0;
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
