--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
   margin: 0;
-  width: 560px;
+  max-width: 560px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 900;
   font-size: 72px;
@@ -9,4 +9,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
+}
+
+@media screen and (max-width: 320px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
