--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,3 +9,17 @@
   -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 585px) {
+  .footer__copyright {
+    align-self: end;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
+    align-self: start;
+    margin-top: 48px;
+    line-height: 14px;
+  }
+}
