--- a/blocks/footer/__list-item/footer__list-item.css
+++ b/blocks/footer/__list-item/footer__list-item.css
@@ -5,3 +5,18 @@
 .footer__list-item:last-of-type {
   margin-right: 0;
 }
+
+@media screen and (max-width: 615px) {
+  .footer__list-item {
+    margin: 0 10px 0 0;
+  }
+}
+
+@media screen and (max-width: 585px) {
+  .footer__list-item {
+    margin: 0 0 32px 0;
+  }
+  .footer__list-item:last-of-type {
+    margin-bottom: 0;
+  }
+}
