--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -10,3 +10,10 @@
     padding-top: 88px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .footer {
+    flex-direction: column;
+    padding-top: 64px;
+  }
+}
