--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,9 +11,16 @@
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 650px) {
   .lead__title {
-    font-size: 40px;
-    line-height: 44px;
+    font-size: 60px;
+    line-height: 65px;
   }
 }
+
+  @media screen and (max-width: 320px) {
+    .lead__title {
+      font-size: 40px;
+      line-height: 44px;
+    }
+  }
