--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-  margin: 0 0 26px;
+  margin: 0 0 27px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: normal;
   font-size: 18px;
@@ -15,6 +15,14 @@
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
+    margin: 0 0 25px;
     font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    padding-right: 16px;
+    padding-left: 16px;
   }
 }
