--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,5 @@
 .place__title {
+  box-sizing: border-box;
   margin: 0;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 900;
@@ -16,8 +17,9 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 320px) {
   .place__title {
+    padding-left: 16px;
     font-size: 32px;
     line-height: 35px;
   }
