--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -11,6 +11,13 @@
   color: #FFFFFF;
 }
 
+@media screen and (max-width: 500px) {
+  .cover__title {
+    font-size: 52px;
+    line-height: 45px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__title {
     font-size: 32px;
