--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 500px) {
   .place {
-    grid-template-columns: calc(500px - 24px*2);
+    grid-template-columns: 1fr;
     gap: 40px;
     margin-top: 60px;
   }
