--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
-  src: url(Inter/Inter/Inter-Bold.woff) format('woff'),
-       url(Inter/Inter/Inter-Bold.woff2) format('woff2');
+  src: url(Inter/Inter/Inter-Black.woff) format('woff'),
+       url(Inter/Inter/Inter-Black.woff2) format('woff2');
   font-family: 'Inter';
   font-style: normal;
   font-weight: bold;
@@ -12,12 +12,4 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
-}
-
-@font-face {
-  src: url(Inter/Inter/Inter-SemiBold.woff) format('woff'),
-       url(Inter/Inter/Inter-SemiBold.woff2) format('woff2');
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
 }
