--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,15 +1,23 @@
 @font-face {
-  src: url(Inter/Inter/Inter-Black.woff) format('woff'),
-       url(Inter/Inter/Inter-Black.woff2) format('woff2');
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: bold;
-}
-
-@font-face {
   src: url(Inter/Inter/Inter-Regular.woff) format('woff'),
        url(Inter/Inter/Inter-Regular.woff2) format('woff2');
   font-family: 'Inter';
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  src: url(Inter/Inter/Inter-Bold.woff) format('woff'),
+       url(Inter/Inter/Inter-Bold.woff2) format('woff2');
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+}
+
+@font-face {
+  src: url(Inter/Inter/Inter-Black.woff) format('woff'),
+       url(Inter/Inter/Inter-Black.woff2) format('woff2');
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
 }
