Исправления после первого ревью

--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -9,3 +9,9 @@
   -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 768px) {
+  .intro__text {
+    max-width: 720px;
+  }
+}
