--- a/pages/index.css
+++ b/pages/index.css
@@ -1,19 +1,22 @@
 @import url(../vendor/normalize.css);
 
+@import url(../fonts/fonts.css);
+
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/page/__content/page__content.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link-item/header__lang-link-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/header/__lang-link/_underlined/header__lang-link_underlined.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 
 @import url(../blocks/page/__content/_size/page__content_size_mini.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
-@import url(../blocks/figure/figure.css);
+@import url(../blocks/lead/__figure/lead__figure.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 
@@ -21,22 +24,23 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__list/_span/intro__list_span.css);
+@import url(../blocks/intro/__span/intro__span.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_train.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_atharva-tulsi.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_steam.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_forest.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_frozen-lake.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_baikal.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_elbrus.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_stones.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_kamchatka.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_kamchatka-mountain-field.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_baikal-rocks.css);
-@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_ergaki.css);
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_train.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_atharva-tulsi.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_steam.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_forest.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_frozen-lake.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_baikal.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_elbrus.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_stones.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_kamchatka.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_kamchatka-mountain-field.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_baikal-rocks.css);*/
+/*@import url(../blocks/photo-grid/__item/_background/photo-grid__item_background_ergaki.css);*/
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/photo-grid/__item-image/photo-grid__item-image.css);
 
 @import url(../blocks/places/places.css);
 @import url(../blocks/page/__places-wrap/page__places-wrap.css);
