--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -6,4 +6,9 @@
   width: 100%;
   min-height: inherit;
   background-color: rgba(42, 44, 47, .3);
+  transition: background-color .4s ease-out;
+}
+
+.cover__overlay:hover {
+  background-color: rgba(42, 44, 47, .8);
 }
