--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,5 +1,8 @@
 .header__lang-links {
-  margin-top: 18px;
+  display: flex;
+  list-style: none;
+  margin: 18px 0 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 320px) {
