--- a/blocks/lead/__figure/lead__figure.css
+++ b/blocks/lead/__figure/lead__figure.css
@@ -1,15 +1,15 @@
-.figure {
+.lead__figure {
   margin: 64px 0 0;
 }
 
 @media screen and (max-width: 1024px) {
-  .figure {
+  .lead__figure {
     margin: 56px 0 0;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .figure {
+  .lead__figure {
     margin: 40px 0 0;
   }
 }
