--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,22 +1,21 @@
 .photo-grid {
-  min-height: 671px;
-  padding-top: 92px;
+  list-style: none;
+  margin: 0;
+  padding: 92px 0 0;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
 }
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    min-height: 942px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 14px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    min-height: 1664px;
     padding-top: 88px;
     grid-template-columns: repeat(2, 1fr);
     gap: 16px;
@@ -25,7 +24,6 @@
 
 @media screen and (max-width: 320px) {
   .photo-grid {
-    min-height: 2724px;
     padding-top: 64px;
     grid-template-columns: 1fr;
     gap: 12px;
