--- a/blocks/page/__places-wrap/page__places-wrap.css
+++ b/blocks/page/__places-wrap/page__places-wrap.css
@@ -5,17 +5,24 @@
   padding-left: 148px;
 }
 
-@media screen and (max-width: 1028px) {
+@media screen and (max-width: 1140px) {
   .page__places-wrap {
     padding-right: 48px;
     padding-left: 48px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 984px) {
   .page__places-wrap {
     padding-right: 24px;
     padding-left: 24px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .page__places-wrap {
+    padding-right: 16px;
+    padding-left: 16px;
   }
 }
 
